--- a/src/Component/login.css
+++ b/src/Component/login.css
@@ -1,3 +1,15 @@
+.modal-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  backdrop-filter: blur(3px);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 999;
+}
 
 /* From Uiverse.io by Praashoo7 */ 
 .form {
