--- a/src/Component/Hero.css
+++ b/src/Component/Hero.css
@@ -1,11 +1,13 @@
 
-.hero-bg {
+.Hero {
+  width:100%;
   background: linear-gradient(-45deg, #1e3a8a, #9333ea, #3b82f6, #10b981);
   background-size: 400% 400%;
   animation: gradientMove 15s ease infinite;
   transform: translateY(-90px);
   box-shadow: 0px 15px 60px gray;
   outline: 1px solid #2b9962;
+  overflow: hidden;
 }
 
 @keyframes gradientMove {
@@ -14,12 +16,12 @@
   100% { background-position: 0% 50%; }
 }
 
-.hero-bg H1{
+.Hero H1{
   margin-top: 100px;
   margin-bottom: 60px;
   color: white;
 }
-.hero-bg .Para{
+.Hero .Para{
    width: 70%;
    margin: auto;
    margin-bottom: 100px;
