--- a/src/Component/ComponentStyle.css
+++ b/src/Component/ComponentStyle.css
@@ -1,3 +1,53 @@
+                                            /******** Sidebar Style  ********/
+.Sidebar{
+  margin-top: 20px;
+}
+
+                                            /******** PdfViewr ********/
+
+.pdf-page-wrapper canvas {
+  display: block;
+  margin: 0 auto;
+  max-width: 100%;
+  background-color: white;
+  padding: 0;
+  border: none;
+}           
+
+                                            /******** Hero ********/
+.Hero {
+  width:100%;
+  background: linear-gradient(-45deg, #1e3a8a, #9333ea, #3b82f6, #10b981);
+  background-size: 400% 400%;
+  animation: gradientMove 15s ease infinite;
+  transform: translateY(-90px);
+  box-shadow: 0px 15px 60px gray;
+  outline: 1px solid #2b9962;
+  overflow: hidden;
+}
+
+@keyframes gradientMove {
+  0% { background-position: 0% 50%; }
+  50% { background-position: 100% 50%; }
+  100% { background-position: 0% 50%; }
+}
+
+.Hero H1{
+  margin-top: 100px;
+  margin-bottom: 60px;
+  color: white;
+}
+.Hero .Para{
+   width: 70%;
+   margin: auto;
+   margin-bottom: 100px;
+   padding: 10px;
+   border-top: 1px  solid white;
+   border-bottom: 1px solid white;
+   color: white;
+}
+
+                                             /******** LoginCard ********/
 .modal-overlay {
   position: fixed;
   top: 0;
