--- a/Frontend/src/Component/ComponentStyle.css
+++ b/Frontend/src/Component/ComponentStyle.css
@@ -60,15 +60,11 @@
   align-items: center;
   z-index: 999;
 }
-
-/* From Uiverse.io by Praashoo7 */ 
+ 
 .form {
   display: flex;
   flex-direction: column;
   gap: 10px;
-  padding-left: 2em;
-  padding-right: 2em;
-  padding-bottom: 0.4em;
   background-color: #171717;
   border-radius: 25px;
   transition: 1s ease-in-out;
@@ -77,18 +73,10 @@
   box-shadow: 0px 15px 60px #00FF7F;
   outline: 1px solid #2b9962;
   border-radius: 10px;
-
-
 }
-
-/* .form:hover {
-  transform: scale(1.05);
-  border: 1px solid black;
-} */
 
 #heading {
   text-align: center;
-  margin: 2em;
   color: rgb(255, 255, 255);
   font-size: 1.2em;
 }
@@ -121,19 +109,13 @@
   color: #d3d3d3;
 }
 
-.form .btn {
-  display: flex;
-  justify-content: center;
-  flex-direction: row;
-  margin-top: 2.5em;
-}
-
 .button1 {
   padding: 0.5em;
-  padding-left: 1.1em;
-  padding-right: 1.1em;
+  padding-left: 2.1em;
+  padding-right: 2.1em;
   border-radius: 5px;
   margin-right: 0.5em;
+  margin-top: 1em;
   border: none;
   outline: none;
   transition: .4s ease-in-out;
@@ -147,9 +129,10 @@
 }
 
 .button2 {
+  width: 70%;
+  margin: auto;
+  margin-bottom: 2em;
   padding: 0.5em;
-  padding-left: 2.3em;
-  padding-right: 2.3em;
   border-radius: 5px;
   border: none;
   outline: none;
@@ -159,24 +142,7 @@
 }
 
 .button2:hover {
-  background-color: black;
-  color: white;
-}
-
-.button3 {
-  margin-bottom: 3em;
-  padding: 0.5em;
-  border-radius: 5px;
-  border: none;
-  outline: none;
-  transition: .4s ease-in-out;
-  background-color: #252525;
-  color: white;
-  position: relative;
-}
-
-.button3:hover {
-background: #03f40f;
+  background: #03f40f;
   color: #fff;
   border-radius: 5px;
   box-shadow: 0 0 5px #03f40f,
